--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>bootstrap</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="style.css"/>
- <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
- <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-</head>
+<html lang="fr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<body>
+    <title>Exemple de grille</title>
 
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet"œœ        >
+  </head>
 
-</body>
-</html>
+  <body>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-1">1 colonne</div>
+      <div class="col-lg-2">2 colonnes</div>
+      <div class="col-lg-3">3 colonnes</div>
+      <div class="col-lg-6">6 colonnes</div>
+    </div>
+    <div class="row">
+      <div class="col-lg-5">5 colonnes</div>
+      <div class="col-lg-4">4 colonnes</div>
+      <div class="col-lg-3">3 colonnes</div>
+    </div>
+  </div>
+    </body>
+  </html>
