--- a/index.html
+++ b/index.html
@@ -12,18 +12,44 @@
 
   <body>
 
-  <div class="container">
+    <div class="container">
+
+  <div class="row">
+
+    <div class="col-md-12">Premier niveau avec 12 colonnes
+
     <div class="row">
-      <div class="col-lg-1">1 colonne</div>
-      <div class="col-lg-2">2 colonnes</div>
-      <div class="col-lg-3">3 colonnes</div>
-      <div class="col-lg-6">6 colonnes</div>
+
+      <div class="col-md-8">Second niveau avec 8 colonnes
+
+      <div class="row">
+
+        <div class="col-md-4">Troisième niveau avec 4 colonnes</div>
+
+        <div class="col-md-6 col-md-offset-2">Troisième niveau avec 6 colonnes
+
+        <div class="row">
+
+          <div class="col-md-3 col-md-offset-1">Quatrième niveau avec 3 colonnes</div>
+
+          <div class="col-md-5 col-md-offset-1">Quatrième niveau avec 5 colonnes</div>
+
+        </div>
+
+        </div>
+
+      </div>
+
+      </div>
+
+      <div class="col-md-4">Second niveau avec 4 colonnes</div>
+
     </div>
-    <div class="row">
-      <div class="col-lg-5">5 colonnes</div>
-      <div class="col-lg-4">4 colonnes</div>
-      <div class="col-lg-3">3 colonnes</div>
-    </div>
+
   </div>
+
+</div>
+
+  
     </body>
   </html>
